--- a/msvc/GLFW.vcxproj.filters
+++ b/msvc/GLFW.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="..\src\window.c">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\osmesa_context.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\internal.h">
