msvc: ensure we compile as C code
Signed-off-by: Steven Noonan <steven@uplinklabs.net>

--- a/msvc/GLFW.vcxproj
+++ b/msvc/GLFW.vcxproj
@@ -48,6 +48,7 @@
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(ProjectDir)..\include;$(ProjectDir)..\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <CompileAs>CompileAsC</CompileAs>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
